<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.honliv.su.MainActivity" >

    <item
        android:id="@+id/action_add"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_add"/>
    <item
        android:id="@+id/action_del"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_del"/>
    <item
        android:id="@+id/action_about"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_about"/>
    <item
        android:id="@+id/action_suggest"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_suggest"/>
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_settings"/>

</menu>
