<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/back"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dip"
        android:weightSum="10" >

        <TextView
            android:id="@+id/tv_cancel"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/top_cancel"
            android:textColor="@android:color/white"
            android:textSize="40sp"
            android:gravity="center_horizontal|center_vertical"
            android:layout_weight="4" />


        <TextView
            android:id="@+id/tv_title"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textColor="@android:color/white"
            android:textSize="20sp" 
            android:gravity="center_horizontal|center_vertical"
            android:layout_weight="2" />

        <TextView
            android:id="@+id/tv_ok"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/top_ok"
            android:textColor="@android:color/white"
            android:textSize="28sp"
            android:gravity="center_horizontal|center_vertical"
            android:layout_weight="4" />

    </LinearLayout>
    
	<View
		android:layout_width="match_parent"
		android:layout_height="1dip"
		android:background="@android:color/white" />
	
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dip"
        android:layout_marginRight="20dip"
        android:layout_marginTop="10dip"
        android:layout_marginBottom="10dip"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/bt_bell"
            android:layout_width="match_parent"
            android:layout_height="50dip"
            android:text="@string/bell"
            android:background="@drawable/button_back"
            android:layout_marginRight="10dip"
            android:layout_weight="0.5" />

        <Button
            android:id="@+id/bt_music"
            android:layout_width="match_parent"
            android:layout_height="50dip"
            android:text="@string/muisc"
            android:background="@drawable/button_back"
            android:layout_marginLeft="10dip"
            android:layout_weight="0.5" />
    
    </LinearLayout>
        
    <ListView
        android:id="@+id/lv_bell_list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
         >
        
    </ListView>
</LinearLayout>
